Fix watch link and overflow icon position
Also remove obsolete IE 6 overrides. Those are not breaking the
functionality only perfect sizing isn't given any longer.

--- a/modules/styles/board/topic/watchlist.less
+++ b/modules/styles/board/topic/watchlist.less
@@ -26,9 +26,7 @@
 
 	a {
 		display: inline-block;
-		*display: inline;
-		zoom: 1;
-		padding: 0.25em 0.5em;
+		padding: 0.5em;
 
 		// mw-ui-quiet is set when the topic is not watched
 		// FIXME: this is a hack, use a better-named class for this
@@ -40,8 +38,6 @@
 
 			.flow-watch {
 				display: inline-block;
-				*display: inline;
-				zoom: 1;
 			}
 		}
 
